prevent horizontal scroll bar from showing up on the details pane in windows/linux (caused by the vertical scrollbar shifting everything to the left

--- a/stylus/resume.styl
+++ b/stylus/resume.styl
@@ -187,6 +187,7 @@ svg
 	background rgba(255, 255, 255, .97)
 	border-left 1px solid rgba(0,0,0,.2)
 	opacity 0
+	overflow-x hidden
 	overflow-y auto
 	padding 30px
 	position absolute
